hphp/test/slow/ext_xdebug/code_coverage_unused.php.expectf
Fatal error: XDEBUG_CC_UNUSED and XDEBUG_CC_DEAD_CODE constants are not currently supported. in %s/test/slow/ext_xdebug/code_coverage_unused.php on line 2
